# XBF

./: .gitignore  COPYRIGHT.md  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
.github/workflows/: kotlin.yml  rust.yml
cpp/: .gitignore  client.cc  issues_to_make.txt
cpp/serde/: Buffer.cpp  Buffer.hh  Makefile  metadata.hh  rust.hh  serde.cpp
docs/: .gitignore  background.md  format_comparison.md  justfile  paper.tex  refs.bib  specification.md
docs/paper/: paper.tex
docs/presentation/: justfile  presentation.tex
nancy/: client.cpp  client_boost.cpp  client_string.cpp  client_ur.cpp  ser_str.cpp  serial_deserial.cpp  serial_int.cpp  serial_new.cpp  server.cpp  server_boost.cpp  server_string.cpp  server_ur.cpp
xbf_kt/: .gitignore  settings.gradle.kts
xbf_kt/lib/: build.gradle.kts
xbf_rs/: .gitignore  Cargo.toml  justfile  tarpaulin-report.html
xbf_rs/examples/: client.rs  formats_bytes_comparison.rs  other_formats_comparison.rs  server.rs
xbf_rs/examples/basic_server/: storage.rs
xbf_rs/examples/format_comparison_client/: main.rs
xbf_rs/examples/format_comparison_server/: main.rs
xbf_rs/examples/server/: main.rs  storage.rs
xbf_rs/examples/shootout_server/: main.rs
xbf_rs/src/: base_metadata.rs  base_type.rs  lib.rs  prelude.rs  util.rs  xbf_primitive.rs  xbf_struct.rs  xbf_vec.rs
xbf_rs/src/conversions/: base_type.rs  primitive.rs  vec.rs
xbf_rs/src/xbf_primitive/: mod.rs  primitive.rs  primitive_metadata.rs  primitive_test.rs
xbf_rs/src/xbf_struct/: struct_metadata.rs  struct_type.rs
xbf_rs/src/xbf_vec/: mod.rs  vec.rs  vec_metadata.rs
xbf_rs/tests/: basic_usage.rs  serde.rs
xdl_kt/: settings.gradle.kts
xdl_kt/lib/src/main/kotlin/xdl_kt/: Library.kt
xdl_rs/: Cargo.toml
xdl_rs/src/: base_metadata.rs  base_type.rs  lib.rs  util.rs  xdl_primitive.rs  xdl_struct.rs  xdl_vec.rs
xdl_rs/src/conversions/: base_type.rs  mod.rs  primitive.rs  vec.rs
xdl_rs/src/xdl_primitive/: mod.rs  primitive.rs  primitive_metadata.rs  primitive_test.rs
xdl_rs/src/xdl_struct/: struct_metadata.rs  struct_type.rs
xdl_rs/src/xdl_vec/: mod.rs  vec.rs  vec_metadata.rs
(+3 files in other folders)
