[package]
name = "xbf_rs"
version = "0.1.0"
authors = ["David Krauthamer <dkrautha@pm.me>"]
edition = "2021"
description = "The reference implementation for the XBF format."
homepage = "https://github.com/XtensibleBinaryFormat/XBF/tree/main"
repository = "https://github.com/XtensibleBinaryFormat/XBF/tree/main"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1.4.3"
indexmap = "2.0.0"

[dev-dependencies]
anyhow = "1.0.72"
ciborium = "0.2.1"
csv = "1.2.2"
quick-xml = { version = "0.30.0", features = ["serialize"] }
reqwest = "0.11.18"
rmp-serde = "1.1.2"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }

[features]
default = ["xbf_threadsafe"]
xbf_threadsafe = []
